--- a/app/simple_pages/templates/about.html
+++ b/app/simple_pages/templates/about.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-    About Page
-    Hello
+
+<h1>Projects</h1>
+        <h3> A Construction Website</h3>
+        Professor - Art Hendela
+        I build this Construction website which was a part of my project in my course IS-117. I have used HTML, CSSand Bootstrap to make this website.
+        My goal for building this web. It is important to reach the audience as I want this construction company to grow.
+    <hr>
+    <h1>Education History </h1>
+        <h3>Bachelors in Business and InformationSystems</h3>
+        <h4>New Jersey Institute of Technology</h4>
+        Gaining extensive training and successfully accomplishing all courses for business and information systems.
+
 {% endblock %}
