--- a/app/simple_pages/templates/page1.html
+++ b/app/simple_pages/templates/page1.html
@@ -1,4 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
-    Page 1
+
+    <h1> Branches</h1>
+        <p> Each repository has a default branch which allows you to work
+
+safely with your project and even helps in fixing bugs. So, you can use a branch that diverges you from the main line of development and continues doing your working without affecting the main line.  </p>
+    <hr>
+    <h1> Merge </h1>
+        <p> In git, when you perform pull request, the commit will be pulled/ merged from one branch to another branch and then that particular pull request will be updated to your live site.   </p>
+    <hr>
+    <h1> Commit </h1>
+        <p> Commit is a command that keeps track of changes and updates that you made while working on your project.   </p>
+    <hr>
+    <h1> Tags </h1>
+        <p>In git, Tags refer to an individual point in your git history which includes the version number for a release. </p>
+    <hr>
+    <h1> Repositories </h1>
+        <p> A git repository is a folder inside a project that will track the changes made to files in your projects over a period. We can update and modify the files in the repository.   </p>
+    <hr>
+
 {% endblock %}
