--- a/app/simple_pages/templates/page3.html
+++ b/app/simple_pages/templates/page3.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    Page 3
+
+
+    Below is my root to my file
+    Cloud computing CI N CD Continuous intergation make Continuous
+
+
 {% endblock %}
