--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -1,4 +1,92 @@
 {% extends "base.html" %}
 {% block content %}
-    Index Page
+
+<!-- My intro-->
+
+
+    <section class = "home">
+        <div class = "container-fluid">
+            <div class = "row">
+                <div class = "section-title text-center">
+                <h1 class = "fw-bold mb-5">Profile</h1>
+                </div>
+                <div class = "col-md-6">
+                    <div class = "home-img">
+                        <img  src = "{{ url_for('static', filename='images/My_image.jpg') }}" alt = "my img" class = " img-fluid float-right img-responsive  ">
+                    </div>
+                </div>
+                <div class = "col-md-6">
+                    <p class = "text-muted">Hard-working Business and InformationSystems major currently attending New Jersey Institute of Technology. Aiming to lever age proven creative thinking, organizational and teamwork skills to successfully fill the UI/UXDesigner role at your company. Frequently praised as detail-oriented by my peers, I can be relied upon to help your company achieve its goals.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+
+
+<!-- Contact section-->
+
+
+
+    <section class = "contact py-5" id = "contact">
+        <div class = "container-lg py-4">
+            <div class = "row justify-content-center">
+                <div class = "col-lg-8">
+                    <div class = "section-title text-center">
+                        <h2 class = "fw-bold mb-5"> Contact Me</h2>
+                    </div>
+                </div>
+            </div>
+            <div class = "row">
+                <div class = "col-md-5">
+                    <div class = "contact-item d-flex mb -3">
+                        <div class="icon fs-4 text-danger">
+                        </div>
+                        <div class="text">
+                            <h3>Email</h3>
+                            <p class = "text-muted">Vap4@njit.edu</p>
+                        </div>
+                    </div>
+                    <div class = "contact-item">
+                        <div class="icon">
+                        </div>
+                        <div class="text">
+                            <h3>Phone</h3>
+                            <p class = "text-muted">(201)-658-5196</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class = "col-md-7">
+                    <div class = "contact-form">
+                        <form>
+                            <div class = "row">
+                                <div class = "col-lg-6 mb-4">
+                                    <input type = "text" placeholder = "Your Name" class = "form-control form-control-lg fs-6 border-0 shadow-sm">
+                                </div>
+                                <div class = "col-lg-6 mb-4">
+                                    <input type = "text" placeholder = "Your Email" class = "form-control form-control-lg fs-6 border-0 shadow-sm">
+                                </div>
+                            </div>
+                            <div class = "row">
+                                <div class = "col-lg-12 mb-4">
+                                    <textarea rows = "5" placeholder = "Please enter you Message" class = "form-control form-control-lg fs-6 border-0 shadow-sm">
+                                    </textarea>
+                                </div>
+                            </div>
+                            <div class = "row">
+                                <div class = "col-lg-12">
+                                    <button type = "submit" class = "btn btn-default px-3">Send
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 {% endblock %}
