--- a/app/simple_pages/templates/page2.html
+++ b/app/simple_pages/templates/page2.html
@@ -1,4 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
-    Page 2
+
+    <h1> Container </h1>
+        <p>A docker container is a package that includes everything to run an application. It can be stopped, started, moved or even delete using Docker API or CLI. We can connect a docker container with one or more networks.  </p>
+    <hr>
+    <h1> Images </h1>
+        <p>A docker image is like a template that provides a list of instructions to create a docker container in order to run on Docker platform. </p>
+    <hr>
+    <h1> Project repository </h1>
+        <p>Project repository in Dockers provides sharing of images in container with other member of Docker community. </p>
+    <hr>
+    <h1> Docker Command</h1>
+        <p> Following are some of the Docker commands that I have used. </p>
+
+            docker start - Starts one or more stopped containers
+            docker stop - Stops one or more running containers
+            docker run- Runs a command in a new container
+            docker build – Builds an image form a Docker file
+            docker pull – Pulls an image or a repository from a registry
+            docker push – Pushes an image or a repository to a registry
+            docker commit – Creates a new image from a container’s changes
+    <hr>
+    <h1> Building project in Docker</h1>
+        <p>Docker command can be run through Terminal without using PyCharm. For example, if we want to make a new container, we can type in the following commands in the terminal. </p>
+            docker create -- name=new_container -it ubuntu
+            docker start new_container
+            docker exec new_container /path/to/my/command
+            docker exec new_container /path/to/another/command
+
+    <hr>
+
+
 {% endblock %}
