--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
             <!-- As a link -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
-                    <a class="navbar-brand" href="/">My Site</a>
+                    <a class="navbar-brand" href="/">Vedanshi's Site</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -33,19 +33,19 @@
                                 <a class="nav-link active" aria-current="page" href="{{ url_for('simple_pages.show', page="index")}}">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="about")}}">About</a>
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="about")}}">About Me</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page1")}}">Page 1</a>
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page1")}}">Git</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page2")}}">Page 2</a>
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page2")}}">Docker</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page3")}}">Page 3</a>
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page3")}}">Python/Flask</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page4")}}">Page 4</a>
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page4")}}">CI/CD</a>
                             </li>
                         </ul>
                     </div>
