--- a/app/simple_pages/templates/page3.html
+++ b/app/simple_pages/templates/page3.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+ Root File
 
     Below is my root to my file
     Cloud computing CI N CD Continuous intergation make Continuous
