--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,18 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('simple_pages.show', page="page4")}}">CI/CD</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page5")}}">Article1</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page6")}}">Article2</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page7")}}">Article3</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page8")}}">Article4</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
