--- a/app/simple_pages/templates/page5.html
+++ b/app/simple_pages/templates/page5.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 Pylint
+    <h1> Instantiation</h1>
+    <p>Instantiation is another word for create. In OOPs the term instantiation is to create a class or object.</p>
+    <hr>
+    <h1> Instantiation</h1>
+    <p></p>
+    <hr>
+    <h1> Instantiation</h1>
+    <p></p>
+    <hr>
 {% endblock %}
