--- a/app/simple_pages/templates/page5.html
+++ b/app/simple_pages/templates/page5.html
@@ -4,10 +4,29 @@ Pylint
     <h1> Instantiation</h1>
     <p>Instantiation is another word for create. In OOPs the term instantiation is to create a class or object.</p>
     <hr>
-    <h1> Instantiation</h1>
-    <p></p>
+    <h1> Object</h1>
+    <p>OOPs has a term called “Object” which consists of different methods and properties. This helps to create specific types of data which are useful. </p>
     <hr>
-    <h1> Instantiation</h1>
-    <p></p>
+    <h1> Class</h1>
+    <p>A class is like a template in which we can make objects in order to execute a different program. </p>
     <hr>
+    <h1> Namespace</h1>
+    <p>Namespace was created to make programming language organized. Every namespace has a specific meaning.</p>
+    <hr>
+    <h1> Constructor</h1>
+    <p>The constructor does a unique work in OOPs. Its purpose is to initialize an object of a class in order to execute a code</p>
+    <hr>
+    <h1>Fixture</h1>
+    <p>Fixture is another word of sample data. It is a set of objects that is used as a baseline to run tests. </p>
+    <hr>
+    <h1>Type hint</h1>
+    <p>Type hints basically provide hints that can force function to accept desired data type. </p>
+    <hr>
+    <h1> Type cast</h1>
+    <p> The function performed through type cast is that we are able to change a way of an object from one data type to another.</p>
+    <hr>
+    <h1>Unit test</h1>
+    <p>The purpose of performing a unit test is to test the correctness of isolated code and clear out if there are any errors. </p>
+
+
 {% endblock %}
