--- a/app/simple_pages/templates/page7.html
+++ b/app/simple_pages/templates/page7.html
@@ -1,4 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 OOPs
+    <h1>Encapsulation</h1>
+    <p>Object Oriented Programming has a concept called encapsulation which describes an idea of binding data and the function of the data while keeping them safe from being misused. Thus, encapsulation allows the user to hide specific information and control its access.
+        Like in the calculator program when we press “450+250” and “=” we directly see the answer. Hence all the steps of solutions are skipped to the final step. This is an example of encapsulation. </p>
+    <hr>
+    <h1> Inheritance</h1>
+    <p>Inheritance is a method in OOP where we can use the mechanism of the parent class in another class. We do that by specifying implementation to maintain the same behavior of class.  </p>
+    <hr>
+    <h1>  Polymorphism</h1>
+    <p>Polymorphism is a concept in OOPS which describes the ability of a message that can be displayed in more than one form. That is, it is a situation that occurs in several different forms.  </p>
+    <hr>
+    <h1>Abstraction</h1>
+    <p>An abstract method is simply a method without an implementation. In this method a programmer can hide all except the relevant data in order to reduce complexity and increase efficiency. </p>
+    <hr>
 {% endblock %}
